test/kubernetes/e2e/features/backendtls/inputs/configmap.yaml
# public cert of self-signed cert loaded into nginx, see nginx.yaml
# separate file so it can be deleted independently
apiVersion: v1
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDJTCCAg2gAwIBAgIUBNZ3jfzRBgOV3kKnhBNPwVhlceAwDQYJKoZIhvcNAQEL
[...]
    BSC2wmYpOMLxCNhpWQTZehg13Y+FGWw4jzREkLOmP+URJcehzWlhR6k=
    -----END CERTIFICATE-----

kind: ConfigMap
metadata:
  name: ca
