test/kubernetes/e2e/features/backendtls/inputs/httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  type: ExternalName
  externalName: httpbin.io
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
