test/kubernetes/e2e/features/backendtls/inputs/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http-web-svc
      name: http
    - protocol: TCP
      port: 8443
      targetPort: https-web-svc
      name: https
---
# nginx cert and key generated via:
# openssl req -x509 -out ex.crt -keyout ex.key \
#   -newkey rsa:2048 -nodes -sha256 \
#   -subj '/CN=example.com' -extensions EXT -config <( \
#    printf "[dn]\nCN=example.com\n[req]\ndistinguished_name = dn\n[EXT]\nsubjectAltName=DNS:example.com\nkeyUsage=digitalSignature\nextendedKeyUsage=serverAuth")
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-conf
data:
  nginx.conf: |
    user nginx;
    worker_processes  1;
    events {
      worker_connections  10240;
    }
    http {
      server {
          listen              80;
          listen              443 ssl;
          server_name         example.com;
          ssl_certificate     /etc/nginx/example.crt;
          ssl_certificate_key /etc/nginx/example.key;

          location / {
            root   /usr/share/nginx/html;
            index  index.html index.htm;
        }
      }
    }
  example.crt: |
    -----BEGIN CERTIFICATE-----
    MIIC6zCCAdOgAwIBAgIJAPdgL5W5vugOMA0GCSqGSIb3DQEBCwUAMBYxFDASBgNV
[...]
    ywK+felXBiCUKrWKFjChgwmrs2bGAUfegKF/TQtvWQ==
    -----END CERTIFICATE-----
  example.key: |
    -----BEGIN PRIVATE KEY-----
    MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQC46DSkpngZavNV
[...]
    OSW1yV7Nj7Kf5AotsE4n5fM=
    -----END PRIVATE KEY-----
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  terminationGracePeriodSeconds: 0
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80
      name: http-web-svc
    - containerPort: 443
      name: https-web-svc
    volumeMounts:
    - name: nginx-conf
      mountPath: /etc/nginx/
      readOnly: true
  volumes:
  - name: nginx-conf
    configMap:
      name: nginx-conf
      items:
      - key: nginx.conf
        path: nginx.conf
      - key: example.crt
        path: example.crt
      - key: example.key
        path: example.key
